# hqp-control

./: README.md  pyproject.toml
.github/workflows/: test.yml
src/hqp/: __init__.py  cli.py  config.py  models.py  profiles.py  server.py  xml_client.py
tests/: test_local_profiles.py  test_profiles.py  test_xml_client.py
