[project]
name = "hqp-control"
version = "0.1.0"
description = "HQPlayer Embedded control library and HTTP API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.1",
    "fastapi>=0.123.9",
    "httpx>=0.28.1",
    "paramiko>=4.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.38.0",
]

[project.scripts]
hqp = "hqp.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hqp"]
